--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -133,6 +133,12 @@ Anthony Armstrong:
   agencies:
   - Office of Personnel Management
   - US Digital Service/Department of Government Efficiency
+  events:
+  - agency: US Digital Service/Department of Government Efficiency
+    date: '2025-03-27'
+    event: Elon Musk and 7 other DOGE staffers appear in a TV interview on FOX news with Brett Baier to defend DOGE. Among other things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal judges were corrupt, the government should work like the Apple Store, and the target is 15% reduction in government spending. Amy Gleason did not appear.
+    name: Anthony Armstrong
+    source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
 
 Anthony Jancso:
   agencies:
@@ -158,6 +164,13 @@ Aram Moghaddassi:
   - Department of Labor
   - Department of the Treasury
   - Health and Human Services
+  - US Digital Service/Department of Government Efficiency
+  events:
+  - agency: US Digital Service/Department of Government Efficiency
+    date: '2025-03-27'
+    event: Elon Musk and 7 other DOGE staffers appear in a TV interview on FOX news with Brett Baier to defend DOGE. Among other things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal judges were corrupt, the government should work like the Apple Store, and the target is 15% reduction in government spending. Amy Gleason did not appear.
+    name: Aram Moghaddassi
+    source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
 
 Ashley Boizelle:
   agencies:
@@ -187,6 +200,11 @@ Brad Smith:
     event: Brad Smith is formally onboarded at HHS as a Senior Advisor and swears the oath of office
     name: Brad Smith
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.65.3.pdf
+  - agency: US Digital Service/Department of Government Efficiency
+    date: '2025-03-27'
+    event: Elon Musk and 7 other DOGE staffers appear in a TV interview on FOX news with Brett Baier to defend DOGE. Among other things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal judges were corrupt, the government should work like the Apple Store, and the target is 15% reduction in government spending. Amy Gleason did not appear.
+    name: Brad Smith
+    source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
 
 Brady Glantz:
   agencies:
@@ -423,6 +441,11 @@ Elon Musk:
     event: Elon Musk arrives at the Pentagon for a meeting with leadership, reportedly to discuss DOGE
     name: Elon Musk
     source: https://www.nbcnews.com/politics/trump-administration/elon-musk-visit-pentagon-discuss-china-rcna197435
+  - agency: US Digital Service/Department of Government Efficiency
+    date: '2025-03-27'
+    event: Elon Musk and 7 other DOGE staffers appear in a TV interview on FOX news with Brett Baier to defend DOGE. Among other things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal judges were corrupt, the government should work like the Apple Store, and the target is 15% reduction in government spending. Amy Gleason did not appear.
+    name: Elon Musk
+    source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
 
 Emily Bryant:
   agencies:
@@ -652,6 +675,13 @@ Jeremy Lewin:
 Joe Gebbia:
   agencies:
   - Office of Personnel Management
+  - US Digital Service/Department of Government Efficiency
+  events:
+  - agency: US Digital Service/Department of Government Efficiency
+    date: '2025-03-27'
+    event: Elon Musk and 7 other DOGE staffers appear in a TV interview on FOX news with Brett Baier to defend DOGE. Among other things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal judges were corrupt, the government should work like the Apple Store, and the target is 15% reduction in government spending. Amy Gleason did not appear.
+    name: Joe Gebbia
+    source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
 
 Jon Koval:
   agencies:
@@ -1293,6 +1323,12 @@ Stephen Ehikian:
   agencies:
   - General Services Administration
   - Office of Personnel Management
+  events:
+  - agency: General Services Administration
+    date: '2025-01-20'
+    event: Stephen Ehikian is sworn in as a Deputy Administrator of the real estate division and Acting Administrator of the GSA
+    name: Stephen Ehikian
+    source: https://www.nextgov.com/people/2025/01/gsa-announces-new-fas-tts-leadership/402485/
 
 Steve Davis:
   agencies:
@@ -1308,6 +1344,11 @@ Steve Davis:
     event: Mike Russo, DOGE chief of staff Steve Davis both demand that Akash Bobba be onboarded before midnight.
     name: Steve Davis
     source: https://www.washingtonpost.com/documents/e08aeb0c-ec70-4235-91a0-290da92067b5.pdf?itid=lk_inline_manual_5
+  - agency: US Digital Service/Department of Government Efficiency
+    date: '2025-03-27'
+    event: Elon Musk and 7 other DOGE staffers appear in a TV interview on FOX news with Brett Baier to defend DOGE. Among other things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal judges were corrupt, the government should work like the Apple Store, and the target is 15% reduction in government spending. Amy Gleason did not appear.
+    name: Steve Davis
+    source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
 
 Tarak Makecha:
   agencies:
@@ -1341,6 +1382,16 @@ Thomas Shedd:
   - US Digital Service/Department of Government Efficiency
   events:
   - agency: General Services Administration
+    date: '2025-01-24'
+    event: Thomas Shedd, a 28-year-old with 8 years of experience working for Tesla, is named the head of GSA's Technology Transformation Service (TTS), the parent of 18F, login.gov and FedRAMP among others.
+    name: Thomas Shedd
+    source: https://www.nextgov.com/people/2025/01/gsa-announces-new-fas-tts-leadership/402485/
+  - agency: General Services Administration
+    date: '2025-02-10'
+    event: Unnamed DOGE staff using non-government accounts conduct dozens of "touch-base" interviews with dozens of US Digital Corps fellows, under the direction of Thomas Shedd
+    name: Thomas Shedd
+    source: https://fedscoop.com/doge-sessions-gsa-staff-probationary-terminations/
+  - agency: General Services Administration
     date: '2025-02-18'
     event: A GSA employee resigned rather than give unrestricted admin access of Notify.gov to Thomas Shedd
     name: Thomas Shedd
@@ -1369,6 +1420,7 @@ Thomas Shedd:
 Tom Krause:
   agencies:
   - Department of the Treasury
+  - US Digital Service/Department of Government Efficiency
   events:
   - agency: Department of the Treasury
     date: '2025-01-08'
@@ -1390,6 +1442,11 @@ Tom Krause:
     event: Ruling in American Federation of Teachers et al v. Bessent et al, Judge Boardman issues a preliminary injunction against DOGE access to internal systems at the Departoment of the Treasury where the justification for access was "the DOGE agenda" (i.e., all of them)
     name: Tom Krause
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.69.0.pdf
+  - agency: US Digital Service/Department of Government Efficiency
+    date: '2025-03-27'
+    event: Elon Musk and 7 other DOGE staffers appear in a TV interview on FOX news with Brett Baier to defend DOGE. Among other things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal judges were corrupt, the government should work like the Apple Store, and the target is 15% reduction in government spending. Amy Gleason did not appear.
+    name: Tom Krause
+    source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
 
 Tyler Hassen:
   agencies:
