--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -65,6 +65,11 @@ agencies:
     named:
     - Michael Grimes
     - Gavin Kliger
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Michael Grimes
   events:
   - date: 2025-01-24
     event: Commerce Department Inspector General is fired in a late-night purge
@@ -106,6 +111,16 @@ agencies:
     named:
     - Jordan Wick
     date: 2025-03-26
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Luke Farritor
+    - Gavin Kliger
+    - Jeremy Lewin
+    - Nikhil Rajpal
+    - Jordan Wick
+    - Chris Young
   vandalism:
   - Website homepage deleted
   - Social media accounts deleted
@@ -293,6 +308,17 @@ agencies:
     - Adam Ramada
     - Ethan Shaotran
     date: 2025-03-26
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Jennifer Balajadia
+    - Alexandra Beynon
+    - Edward Coristine
+    - Luke Farritor
+    - Conor Fennessy
+    - Brooks Morgan
+    - Ethan Shaotran
   events:
   - date: 2025-01-24
     event: Trump fires the Inspector General for the Department of Education in a late-night purge
@@ -416,6 +442,13 @@ agencies:
     named:
     - Luke Farritor
     date: 2025-03-12
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Luke Farritor
+    - Adam Ramada
+    - Ryan Riedel
   events:
   - date: 2025-01-24
     event: Trump fires the Inspector General for the Department of Energy in a late-night purge
@@ -534,6 +567,31 @@ agencies:
     - Vinay Hiremath
     - Shaun Maguire
     date: 2025-03-26
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    comment: I am including EOP names in this list
+    date: 2025-03-28
+    named:
+    - Justin Aimonetti
+    - Jennifer Balajadia
+    - Alexandra Beynon
+    - Ashley Boizelle
+    - James Burnham
+    - Steve Davis
+    - Marko Elez
+    - Amy Gleason
+    - Joshua Hanley
+    - Stephanie Holmes
+    - Keenan Kmiec
+    - Kendall Lindemann
+    - Katie Miller
+    - Noah Peters
+    - Adam Ramada
+    - Austin Raynor
+    - Brad Smith
+    - Christopher Stanley
+    - Jordan Wick
+    - Chris Young
   events:
   - date: 2024-12-30
     event: Amy Gleason joins the USDS, according to her sworn testimony.
@@ -690,7 +748,7 @@ agencies:
     date_filed: 2025-02-13
     link: https://www.courtlistener.com/docket/69638651/new-mexico-state-of-v-musk/
   - name: Citizens For Responsibility and Ethics in Washington (CREW) vs. DOGE Service (D.D.C.)
-    description: Plaintiff claims that the United States DOGE Service (USDS) “has provided no meaningful transparency into its operations or assurances that it is maintaining proper records.” The complaint alleges that Defendants have refused to comply with FOIA requests for records and demands for records preservation under the Federal Records Act (FRA).
+    description: Plaintiff claims that the United States DOGE Service (USDS) "has provided no meaningful transparency into its operations or assurances that it is maintaining proper records." The complaint alleges that Defendants have refused to comply with FOIA requests for records and demands for records preservation under the Federal Records Act (FRA).
     case_no: 1:25-cv-00511
     date_filed: 2025-02-20
     link: https://www.courtlistener.com/docket/69658871/citizens-for-responsibility-and-ethics-in-washington-v-us-doge-service/
@@ -738,6 +796,11 @@ agencies:
     named:
     - Edward Coristine
     date: 2025-03-12
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Brad Smith
   events:
   - date: 2025-02-08
     event: DOGE social media account on X boasts about deleting a DHS page of LGBTQI+ resources
@@ -765,9 +828,11 @@ agencies:
     organization: ProPublica
     named:
     - Tyler Hassen
-  people:
-  - Tyler Hassen
-  - Bryton Shang
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Tyler Hassen
   events:
   - date: 2025-01-28
     event: Two DOGE staffers attempted to force water pumps to be turned on in a large reservoir in California for a photo op
@@ -814,6 +879,17 @@ agencies:
     named:
     - Adam Ramada
     date: 2025-03-26
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Sam Beyda
+    - Derek Geissler
+    - Cole Killian
+    - Aram Moghaddassi
+    - Adam Ramada
+    - Thomas Shedd
+    - Jordan Wick
   events:
   - date: 2025-01-24
     event: Trump fires the Inspector General for the Department of Labor in a late-night purge
@@ -862,7 +938,11 @@ agencies:
     organization: ProPublica
     named:
     - Daniel Abrahamson
-
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Daniel Abrahamson
 - name: Department of the Treasury
   acronym: Treasury
   roundups:
@@ -898,6 +978,16 @@ agencies:
     named:
     - Baris Akis
     date: 2025-03-26
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Baris Akis
+    - Sam Corcos
+    - Marko Elez
+    - Tom Krause
+    - Aram Moghaddassi
+    - Ryan Wunderly
   events:
   - date: 2025-01-08
     event: The leader of the Trump transition team for the Treasury Department sends an email requesting that Thomas Krause be incuded on the "day 1 team, to lead on Fiscal Services modernization efforts."
@@ -1097,6 +1187,13 @@ agencies:
     named:
     - Cole Killian
     date: 2025-03-12
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Erica Jehling
+    - Cole Killian
+    - Kathryn Armstrong Loving
   events:
   - date: 2025-01-24
     event: Trump fires the EPA Inspector General in a late-night purge
@@ -1120,6 +1217,14 @@ agencies:
   roundups:
   - source: https://projects.propublica.org/elon-musk-doge-tracker/
     organization: ProPublica
+    named:
+    - Brady Glantz
+    - Thomas Kiernan
+    - Ted Malaska
+    - Sam Smeal
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
     named:
     - Brady Glantz
     - Thomas Kiernan
@@ -1163,7 +1268,11 @@ agencies:
     organization: ProPublica
     named:
     - Justin Monroe
-
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Justin Monroe
 - name: Federal Emergency Management Agency
   acronym: FEMA
   roundups:
@@ -1289,6 +1398,26 @@ agencies:
     - Kyle Schutt
     - Ethan Shaotran
     date: 2025-03-26
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Akash Bobba
+    - Ashley Boizelle
+    - Nate Cavanaugh
+    - Edward Coristine
+    - Steve Davis
+    - Stephen Ehikian
+    - Luke Farritor
+    - Nicole Hollander
+    - Erica Jehling
+    - Cole Killian
+    - Adam Ramada
+    - Frank Schuler
+    - Kyle Schutt
+    - Riley Sennott
+    - Ethan Shaotran
+    - Thomas Shedd
   events:
   - date: 2025-01-20
     event: Stephen Ehikian is sworn in as a Deputy Administrator of the real estate division and Acting Administrator of the GSA
@@ -1393,6 +1522,16 @@ agencies:
     - Luke Farritor
     - Aram Moghaddassi
     - Rachel Riley
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Luke Farritor
+    - Conor Fennessy
+    - Mattieu Gamache-Asselin
+    - Amy Gleason
+    - Clark Minor
+    - Rachel Riley
   events:
   - date: 2025-01-24
     event: Trump fires the HHS Inspector General in a late-night purge
@@ -1435,6 +1574,13 @@ agencies:
     named:
     - Scott Langmack
     - Michael Mirski
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Scott Langmack
+    - Michael Mirski
+    - Ethan Shaotran
   events:
   - date: 2025-01-26
     event: Spurred by rumors there would be a funding freeze, HUD grantees drew their funds early at 5x normal rate or $1.5 billion
@@ -1555,9 +1701,13 @@ agencies:
     - Baris Akis
     - Sam Corcos
     - Gavin Kliger
-  people:
-  - Gavin Kliger
-  - Sam Corcos
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Baris Akis
+    - Sam Corcos
+    - Gavin Kliger
   events:
   - date: 2025-02-13
     event: Gavin Kliger arrives at the IRS to begin onboarding
@@ -1617,6 +1767,13 @@ agencies:
     organization: ProPublica
     named:
     - Scott Coulter
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Scott Coulter
+    - Riley Sennott
+    - Alexander Simonpour
   events:
   - date: 2025-02-14
     event: NASA administrator emails all staff to report that "DOGE has arrived"
@@ -1649,6 +1806,11 @@ agencies:
     named:
     - Nikhil Rajpal
     date: 2025-03-12
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Nikhil Rajpal
   events:
   - date: 2025-02-04
     event: DOGE staff enter NOAA facilities
@@ -1739,6 +1901,7 @@ agencies:
     - Greg Hogan
     - Stephanie Holmes
     - Gavin Kliger
+    - Tarak Makecha
     - Bryanne-Michelle Mlodzianowski
     - Justin Monroe
     - Noah Peters
@@ -1791,6 +1954,33 @@ agencies:
     - Scott Kupor
     - Amanda Scales
     date: 2025-03-26
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Baris Akis
+    - Jacob Altik
+    - Anthony Armstrong
+    - Riccardo Biasini
+    - Brian Bjelde
+    - Akash Bobba
+    - Edward Coristine
+    - Steve Davis
+    - Stephen Duarte
+    - Joe Gebbia
+    - Christina Hanna
+    - Greg Hogan
+    - Stephanie Holmes
+    - Scott Kupor
+    - Gavin Kliger
+    - Bryanne-Michelle Mlodzianowski
+    - Justin Monroe
+    - Noah Peters
+    - Nikhil Rajpal
+    - Austin Raynor
+    - Amanda Scales
+    - Christopher Stanley
+    - Chris Young
   events:
   - date: 2025-01-20
     event: Acting OPM Director Charles Ezell replaces existing CIO Melvin Brown with Greg Hogan
@@ -1958,6 +2148,11 @@ agencies:
     named:
     - Edward Coristine
     date: 2025-03-12
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Edward Coristine
   events:
   - date: 2025-01-24
     event: Trump fires the SBA Inspector General in a late-night purge
@@ -1989,6 +2184,12 @@ agencies:
     - Edward Coristine
     - Luke Farritor
     date: 2025-03-12
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Jeremy Lewin
+    - Tarak Makecha
   events:
   - date: 2025-02-10
     event: Edward Coristine and Luke Farritor are posted to the State Department's Bureau of Diplomatic Technology
@@ -2065,6 +2266,22 @@ agencies:
     date: 2025-03-26
     named:
     - Antonio Gracias
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Jacob Altik
+    - Akash Bobba
+    - Scott Coulter
+    - Marko Elez
+    - Luke Farritor
+    - Antonio Gracias
+    - Cole Killian
+    - Jon Koval
+    - Nikhil Rajpal
+    - Payton Rehling
+    - Mike Russo
+    - Ethan Shaotran
   events:
   - date: 2025-01-30
     event: Leland Dudek reaches out to Tiffany Flick, the Associate Director of Budget, Facilities and Security to inform her two DOGE staff would be onboarding. He was a mid-level employee at the time.
@@ -2194,6 +2411,11 @@ agencies:
     - Leland Dudek
     - Mike Russo
     source: https://thehill.com/homenews/5212751-sen-wyden-questions-bisignano/
+  - date: 2025-03-28
+    event: Reports emerge that DOGE is planning to rewrite the entire COBOL codebase for Social Security to Java in months using generative AI
+    named:
+    - Steve Davis
+    source: https://www.wired.com/story/doge-rebuild-social-security-administration-cobol-benefits/
   systems:
   - name: Anti-Fraud Enterprise Solution
     acronym: AFES
@@ -2362,6 +2584,14 @@ agencies:
     - Luke Farritor
     - Gavin Kliger
     date: 2025-03-12
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Edward Coristine
+    - Luke Farritor
+    - Gavin Kliger
+    - Jeremy Lewin
   events:
   - date: 2025-01-27
     event: A DOGE official first arrives at USAID. Later, senior staff are summoned to a meeting with Gavin Kliger and Luke Farritor.
@@ -2577,6 +2807,12 @@ agencies:
     named:
     - Justin Fulcher
     date: 2025-03-26
+  - source: https://www.wired.com/story/elon-musk-doge-silicon-valley-corporate-connections/
+    organization: Wired Magazine
+    date: 2025-03-28
+    named:
+    - Justin Fulcher
+    - Cary Volpert
   events:
   - date: 2025-01-24
     event: Trump fires the VA Inspector General in a late-night purge
