Jeremy Lewin at USAID

--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -2673,6 +2673,11 @@ agencies:
     - Jeremy Lewin
     - Kenneth Jackson
     source: https://www.nytimes.com/2025/03/19/us/politics/usaid-doge-leadership.html
+  - date: 2025-03-28
+    event: Almost all of the remaining 900 USAID employees are terminated by email from Jeremy Lewin with RIFs that will go into effect either in July or September
+    named:
+    - Jeremy Lewin
+    source: https://www.npr.org/sections/goats-and-soda/2025/03/28/g-s1-56968/usaid-terminates-nearly-all-its-remaining-employees
   vandalism:
   - Entire website removed
   - Social media accounts deleted
