--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -683,6 +683,11 @@ Jeremy Lewin:
     event: Peter Marocco says that he will be succeeded at the agency by Jeremy Lewin and Kenneth Jackson
     name: Jeremy Lewin
     source: https://www.nytimes.com/2025/03/19/us/politics/usaid-doge-leadership.html
+  - agency: US Agency for International Development
+    date: '2025-03-28'
+    event: Almost all of the remaining 900 USAID employees are terminated by email from Jeremy Lewin with RIFs that will go into effect either in July or September
+    name: Jeremy Lewin
+    source: https://www.npr.org/sections/goats-and-soda/2025/03/28/g-s1-56968/usaid-terminates-nearly-all-its-remaining-employees
 
 Joe Gebbia:
   agencies:
